--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-MYSQL_URL=jdbc:mysql://localhost:3306
-MYSQL_USER=mysql_user
+MYSQL_URL=jdbc:mysql://localhost:3306/horus
+MYSQL_USER=mysql_username
 MYSQL_PASSWORD=mysql_password
+
+SMTP_SERVER=""
+SMTP_PORT="25"
+SMTP_USERNAME=""
+SMTP_PASSWORD=""
