--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+email.smtp.server=${SMTP_SERVER}
+email.smtp.port=${SMTP_PORT}
+email.smtp.username=${SMTP_USERNAME}
+email.smtp.password=${SMTP_PASSWORD}
