Able to send reset code by email

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+BASE_URL="http://127.0.0.1:8080"
+
 MYSQL_URL=jdbc:mysql://localhost:3306/horus
 MYSQL_USER=mysql_username
 MYSQL_PASSWORD=mysql_password
