--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.thymeleaf.check-template-location=false
 # テンプレート解決の最適化
 spring.thymeleaf.enabled=true
 
+spring.application.baseurl=${BASE_URL}
 #データベース
 spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${MYSQL_USER}
